@@ -73,6 +73,14 @@ $magicWords = array(
 	'MAG_SUBPAGENAME',
 	'MAG_SUBPAGENAMEE',
 	'MAG_DISPLAYTITLE',
+	'MAG_TALKSPACE',
+	'MAG_TALKSPACEE',
+	'MAG_SUBJECTSPACE',
+	'MAG_SUBJECTSPACEE',
+	'MAG_TALKPAGENAME',
+	'MAG_TALKPAGENAMEE',
+	'MAG_SUBJECTPAGENAME',
+	'MAG_SUBJECTPAGENAMEE',	
 );
 if ( ! defined( 'MEDIAWIKI_INSTALL' ) )
 	wfRunHooks( 'MagicWordMagicWords', array( &$magicWords ) );
@@ -108,6 +116,14 @@ $wgVariableIDs = array(
 	MAG_SUBPAGENAME,
 	MAG_SUBPAGENAMEE,
 	MAG_DISPLAYTITLE,
+	MAG_TALKSPACE,
+	MAG_TALKSPACEE,
+	MAG_SUBJECTSPACE,
+	MAG_SUBJECTSPACEE,
+	MAG_TALKPAGENAME,
+	MAG_TALKPAGENAMEE,
+	MAG_SUBJECTPAGENAME,
+	MAG_SUBJECTPAGENAMEE,
 );
 if ( ! defined( 'MEDIAWIKI_INSTALL' ) )
 	wfRunHooks( 'MagicWordwgVariableIDs', array( &$wgVariableIDs ) );
